# microserviceSimBackend

./: .env.example  .gitignore  API.md  pyproject.toml  run.py  sim_backend.spec
app/: config.py  database.py  main.py  path_constants.py
app/dependencies/: __init__.py  services.py
app/exceptions/: __init__.py  domain.py
app/models/: task.py
app/repositories/: __init__.py  task_repository.py
app/routers/: detector.py  replay.py  resource_log.py  simulations.py  tag_log.py
app/schemas/: detector.py  simulation.py
app/services/: detector_service.py  jsonl_service.py  process_manager.py  replay_service.py  simulation_service.py  task_stream_service.py  type_callchain_parse.py
app/utils/: file_helpers.py
