[project]
name = "sim-backend"
version = "0.1.0"
description = "FastAPI backend for microservice cloud simulation system"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["app*"]
